--- a/pVenta/nbproject/project.properties
+++ b/pVenta/nbproject/project.properties
@@ -37,7 +37,8 @@ file.reference.mysql-connector-j-9.2.0.jar=C:\\Users\\jerem\\Desktop\\mysql-conn
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${file.reference.mysql-connector-j-9.2.0.jar}
+    ${file.reference.mysql-connector-j-9.2.0.jar}:\
+    ${libs.absolutelayout.classpath}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
@@ -73,7 +74,7 @@ jlink.additionalmodules=
 jlink.additionalparam=
 jlink.launcher=true
 jlink.launcher.name=puntoVenta
-main.class=database.pruebaConexion
+main.class=presentacion.FmPrincipal
 manifest.file=manifest.mf
 meta.inf.dir=${src.dir}/META-INF
 mkdist.disabled=false
